# coap-ace-poc-firmware

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build-hexfile.sh  build-hexfiles.sh  build.rs  demo_as_association.yaml  memory.x  rust-toolchain.toml  uicr_reset_pin21.hex
.cargo/: config  config.toml
configs/: d00.yaml  d01.yaml  d02.yaml  d03.yaml  d04.yaml  d05.yaml  d06.yaml  d07.yaml  d08.yaml  d09.yaml  d10.yaml  d11.yaml  d12.yaml  d13.yaml  d14.yaml  d15.yaml  d16.yaml  d17.yaml  d18.yaml  d19.yaml  generate.py  into-admin-interface-value.py  into-playground-calls.py
src/: alloc.rs  blink.rs  coap.rs  coap_gatt.rs  devicetime.rs  main.rs  rs_configuration.rs
