# SPDX-FileCopyrightText: Copyright 2022 EDF (Électricité de France S.A.)
# SPDX-License-Identifier: BSD-3-Clause
# See README for all details on copyright, authorship and license.

[package]
name = "coap-ace-poc-firmware"
version = "0.1.0"
edition = "2021"
authors = [ "Christian Amsüss" ]
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = [ "hardware-nrf52dk" ]
# Not parametrizing into dependencies yet
hardware-nrf52dk = []

[profile.release]
# to get better output from defmt / probe-run
debug = 2

[dependencies]
# FIXME: CoAP tools still sit on heapless 0.7, but the softdevice wrapper is on
# 0.8; grep for heapless07 to see which workarounds need to be removed once
# that is fixed.
heapless07 = { package = "heapless", version = "0.7", features = [ "defmt" ] }
heapless = { version = "0.8", features = [ "defmt-03" ] }
# Providing general entry
cortex-m-rt = "0.7.0"

# Debug output
defmt = "0.3"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3", features= ["print-defmt"] }

# Providing an asynchronous runtime needed for the softdevice
# For integrated-timers see https://github.com/embassy-rs/embassy/issues/1109
# (the alternative is generic-queue on embassy-time)
embassy-executor = { version = "0.4.0", features = [ "defmt", "integrated-timers", "executor-thread", "arch-cortex-m" ]}
# ... and helpers to get the 'static Server we need in the runners
static_cell = "1"

embassy-time = { version = "0.2.0", features = [ "defmt" ] }
embassy-sync = "0.5.0"

fixed = "1"
# For accessing fixed internal (as it doesn't export ToInt)
typenum = "1.15"

# Hardware support
nrf-softdevice = { version = "0.1.0", features = ["defmt", "nrf52832", "s132", "ble-peripheral", "critical-section-impl", "ble-gatt-server", "evt-max-size-512" ] }
# We could pick 112, that would suffice from the required features, but
# building on 132 to ensure we can migrate over.
nrf-softdevice-s132 = "0.1.1"
embassy-nrf = { version = "0.1.0", features = [ "defmt", "nrf52832", "gpiote", "time-driver-rtc1" ]}
# LEDs and buttons, really
nrf52832-hal = "0.15.1"

coap-message = "0.2"
coap-gatt-utils = { git = "https://gitlab.com/oscore/coap-gatt-utils/" }
coap-handler = "0.1"
# It'd be nice to use ciborium here, but that's not implemented b/c it's not
# easily no_alloc. Anyway, switching over should only be a matter from moving
# the handlers from new_minicbor to new_ciborium if the need arises.
coap-handler-implementations = { version = "0.3.5", features = [ "minicbor" ] }
coap-numbers = "0.2"
# The version coap-handler-implementations caters for
minicbor = "0.15"

# RS
ace-oscore-helpers = { git = "https://gitlab.com/oscore/ace-oscore-helpers/", features = [ "liboscore" ] }
rand_core = "0.6"
dcaf = { version = "^0.3", default-features = false }
coset = { version = "^0.3", default-features = false }

embedded-alloc = "0.5"
# Needed to introspect ClaimsSet.rest
ciborium = { version = "0.2", default-features = false }

liboscore = { git = "https://gitlab.com/oscore/liboscore/", branch = "rust-backends" }
liboscore-msgbackend = { git = "https://gitlab.com/oscore/liboscore/", branch = "rust-backends", features = [ "alloc" ] }
# only to enable the feature
# liboscore-cryptobackend = { git = "https://gitlab.com/oscore/liboscore/", branch = "rust-backends", features = [ "log_cryptographic_operations_including_secret_keys" ] }
# just for the above
log-to-defmt = "0.1.0"

# for rendering the 4.01
windowed-infinity = { version = "0.1.2", features = [ "with_ciborium" ] }
ciborium-ll = { version = "0.2", default-features = false }

[build-dependencies]
serde = "1"
serde_yaml = "0.9.16"
hex = "0.4"

[patch.crates-io]
# These are published, but wisdom on matrix is to not mix them
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "3b6eaf414a92114037a40dcb3ce37a4191c57a2b" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "3b6eaf414a92114037a40dcb3ce37a4191c57a2b" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "3b6eaf414a92114037a40dcb3ce37a4191c57a2b" }

# None of these are available on crates.io yet
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "3b6eaf414a92114037a40dcb3ce37a4191c57a2b" }

nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", rev = "fa1d5915be4de37b97b4771ddd22bce07d69be54" }
nrf-softdevice-s132 = { git = "https://github.com/embassy-rs/nrf-softdevice", rev = "fa1d5915be4de37b97b4771ddd22bce07d69be54" }

coset = { git = "https://github.com/chrysn-pull-requests/coset", branch = "oscore" }
dcaf = { git = "https://github.com/chrysn-pull-requests/dcaf-rs", branch = "oscore" }
